# opa-policy-api

./: .dockerignore  .env.example  .gitignore  DOCKER.md  DOCKER_SETUP_SUMMARY.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 019cbf88d580_initial_migration_with_applications_.py
app/: __init__.py  config.py  database.py  dependencies.py  exceptions.py  main.py
app/auth/: __init__.py  token_decoder.py
app/models/: __init__.py  application.py  custom_policy.py  role_mapping.py
app/repositories/: __init__.py  application_repository.py  custom_policy_repository.py  role_mapping_repository.py
app/routers/: applications.py  custom_policies.py  health.py  permissions.py  role_mappings.py
app/schemas/: __init__.py  application.py  custom_policy.py  error.py  permission.py  role_mapping.py  user.py
app/services/: __init__.py  application_service.py  custom_policy_service.py  opa_service.py  role_mapping_service.py  s3_service.py
app/templates/: demo.html
policies/: .gitkeep  permissions.rego
scripts/: EXAMPLES.md  README.md  generate_token.py  init-localstack.sh
tests/: __init__.py  test_application_service.py  test_applications_router.py  test_auth.py  test_custom_policies_router.py  test_custom_policy_service.py  test_dependencies.py  test_health_router.py  test_main.py  test_opa_service.py  test_permissions_router.py  test_role_mapping_service.py  test_role_mapping_service_integration.py  test_role_mappings_router.py
(+6 files in other folders)
